Adição do serviço de contratos
