# src/core/api/to_de_taxi/models/contato-summary.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+export interface ContatoSummary {
+  id?: string;
+  assunto?: string;
+  conteudo?: string;
+  nome?: string;
+  email?: string;
+  idTaxista?: string;
+  idPassageiro?: string;
+}
