# src/core/api/to_de_taxi/models/response-contato-summary.ts
@@ -1,0 +1,20 @@
+/* tslint:disable */
+import { ContatoSummary } from './contato-summary';
+import { Notification } from './notification';
+export interface ResponseContatoSummary {
+
+  /**
+   * Dados vinculados à resposta da operação (de qualquer formato)
+   */
+  data?: ContatoSummary;
+
+  /**
+   * Indica se a operação foi bem sucedida
+   */
+  success?: boolean;
+
+  /**
+   * Notificações do domínio.
+   */
+  notifications?: Array<Notification>;
+}
