# src/core/api/to_de_taxi/models/response-ienumerable-contato-summary.ts
@@ -1,0 +1,20 @@
+/* tslint:disable */
+import { ContatoSummary } from './contato-summary';
+import { Notification } from './notification';
+export interface ResponseIEnumerableContatoSummary {
+
+  /**
+   * Dados vinculados à resposta da operação (de qualquer formato)
+   */
+  data?: Array<ContatoSummary>;
+
+  /**
+   * Indica se a operação foi bem sucedida
+   */
+  success?: boolean;
+
+  /**
+   * Notificações do domínio.
+   */
+  notifications?: Array<Notification>;
+}
