# src/core/api/to_de_taxi/swagger.json
@@ -5,6 +5,232 @@
     "title": "CloudMe ToDeTaxi API"
   },
   "paths": {
+    "/api/v1/Contato": {
+      "get": {
+        "tags": [
+          "Contato"
+        ],
+        "summary": "Gets all Contatos.",
+        "operationId": "ApiV1ContatoGet",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[IEnumerable[ContatoSummary]]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      },
+      "put": {
+        "tags": [
+          "Contato"
+        ],
+        "summary": "Modifies an existing Contato.",
+        "operationId": "ApiV1ContatoPut",
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "ContatoSUmmary",
+            "in": "body",
+            "description": "Modified Contato list's properties summary",
+            "required": false,
+            "schema": {
+              "$ref": "#/definitions/ContatoSummary"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[Boolean]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "Contato"
+        ],
+        "summary": "Creates a new Cotnrato.",
+        "operationId": "ApiV1ContatoPost",
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "ContatoSummary",
+            "in": "body",
+            "description": "Contato's summary",
+            "required": false,
+            "schema": {
+              "$ref": "#/definitions/ContatoSummary"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[Guid]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      }
+    },
+    "/api/v1/Contato/{id}": {
+      "get": {
+        "tags": [
+          "Contato"
+        ],
+        "summary": "Gets a Contato.\r\n<param name=\"id\">Contato's ID</param>",
+        "operationId": "ApiV1ContatoByIdGet",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[ContatoSummary]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Contato"
+        ],
+        "summary": "Removes an existing Contato.",
+        "operationId": "ApiV1ContatoByIdDelete",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "DialList's ID",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[Boolean]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      }
+    },
     "/api/v1/Contrato": {
       "get": {
         "tags": [
@@ -3431,6 +3657,51 @@
         ]
       }
     },
+    "/api/v1/GrupoUsuario/by_user": {
+      "get": {
+        "tags": [
+          "GrupoUsuario"
+        ],
+        "summary": "Obtém os grupos de usuários de um usuário específico.",
+        "operationId": "ApiV1GrupoUsuarioBy_userGet",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "id_usuario",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[IEnumerable[GrupoUsuarioSummary]]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      }
+    },
     "/api/v1/GrupoUsuario/{id}": {
       "get": {
         "tags": [
@@ -3882,6 +4153,65 @@
             "description": "Success",
             "schema": {
               "$ref": "#/definitions/Response[IEnumerable[Guid]]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      }
+    },
+    "/api/v1/Mensagem/msgs_usr": {
+      "get": {
+        "tags": [
+          "Mensagem"
+        ],
+        "summary": "Obtém todas as mensagens do usuário (como remetente ou destinatário)",
+        "operationId": "ApiV1MensagemMsgs_usrGet",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "id_usuario",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uuid"
+          },
+          {
+            "name": "inicio",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "date-time"
+          },
+          {
+            "name": "fim",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "date-time"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[IEnumerable[DetalhesMensagem]]"
             }
           },
           "401": {
@@ -7418,14 +7748,14 @@
     }
   },
   "definitions": {
-    "Response[IEnumerable[ContratoSummary]]": {
+    "Response[IEnumerable[ContatoSummary]]": {
       "type": "object",
       "properties": {
         "data": {
           "description": "Dados vinculados à resposta da operação (de qualquer formato)",
           "type": "array",
           "items": {
-            "$ref": "#/definitions/ContratoSummary"
+            "$ref": "#/definitions/ContatoSummary"
           }
         },
         "success": {
@@ -7441,18 +7771,32 @@
         }
       }
     },
-    "ContratoSummary": {
+    "ContatoSummary": {
       "type": "object",
       "properties": {
         "id": {
           "format": "uuid",
           "type": "string"
         },
+        "assunto": {
+          "type": "string"
+        },
         "conteudo": {
           "type": "string"
         },
-        "ultimaVersao": {
-          "type": "boolean"
+        "nome": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "idTaxista": {
+          "format": "uuid",
+          "type": "string"
+        },
+        "idPassageiro": {
+          "format": "uuid",
+          "type": "string"
         }
       }
     },
@@ -7507,6 +7851,64 @@
           "items": {
             "$ref": "#/definitions/Notification"
           }
+        }
+      }
+    },
+    "Response[ContatoSummary]": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "$ref": "#/definitions/ContatoSummary",
+          "description": "Dados vinculados à resposta da operação (de qualquer formato)"
+        },
+        "success": {
+          "description": "Indica se a operação foi bem sucedida",
+          "type": "boolean"
+        },
+        "notifications": {
+          "description": "Notificações do domínio.",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Notification"
+          }
+        }
+      }
+    },
+    "Response[IEnumerable[ContratoSummary]]": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "description": "Dados vinculados à resposta da operação (de qualquer formato)",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ContratoSummary"
+          }
+        },
+        "success": {
+          "description": "Indica se a operação foi bem sucedida",
+          "type": "boolean"
+        },
+        "notifications": {
+          "description": "Notificações do domínio.",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Notification"
+          }
+        }
+      }
+    },
+    "ContratoSummary": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "format": "uuid",
+          "type": "string"
+        },
+        "conteudo": {
+          "type": "string"
+        },
+        "ultimaVersao": {
+          "type": "boolean"
         }
       }
     },
